--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,39 @@
+Authlib==0.14.1
 autopep8==1.4.3
+boto3==1.12.11
+botocore==1.15.11
+braintree==3.59.0
 certifi==2018.11.29
+cffi==1.14.0
+chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+cryptography==2.8
 cssmin==0.2.0
+docutils==0.15.2
 Flask==1.0.2
 Flask-Assets==0.12
 Flask-Cors==3.0.7
+Flask-Login==0.5.0
+Flask-WTF==0.14.3
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.10
+jmespath==0.9.5
 jsmin==2.2.2
 MarkupSafe==1.1.0
+oauthlib==3.1.0
 peewee==3.8.2
 peewee-db-evolve==3.7.0
 psycopg2-binary==2.7.7
 pycodestyle==2.5.0
+pycparser==2.19
+python-dateutil==2.8.1
 python-dotenv==0.10.1
+requests==2.23.0
+s3transfer==0.3.3
 six==1.12.0
+urllib3==1.25.8
 webassets==0.12.1
 Werkzeug==0.14.1
+WTForms==2.2.1
